--- a/ReedHampton/Views/ContactInformation/Index.cshtml
+++ b/ReedHampton/Views/ContactInformation/Index.cshtml
@@ -25,15 +25,14 @@
 @{
     if (User.Identity.IsAuthenticated)
     {
-        <input type="button" style="float:left; margin-top:35px; margin-right:15px;" class="btn btn-success" value="Add Contact Information" onclick="location.href='@Url.Action("Create", "ContactInformations")'" />
+        <input type="button" style="float:left; margin-top:35px; margin-right:15px;" class="btn btn-success" value="Add Contact Information" onclick="location.href='@Url.Action("Create", "ContactInformation")'" />
     }
 }
 
 
-<h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:75px;"> Let's be... Amici... Tomodachi... Copains... <strng>Friends.</strng></h1>
-<h2 style="text-align:center; font-family:Garamond; font-size:32px; padding-top:30px; color:#660000;">Get in touch with me at any of these places</h2>
+<h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:75px; padding-bottom:130px;"> Let's be, Amici... Tomodachi... Copains... Friends</h1>
 
-<br /><br />
+
 
 @{
     string facebookURL = "";
@@ -62,7 +61,7 @@
 
             <!--FACEBOOK LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:25px;">
+            <div class="col" style="padding-left:75px;">
                 @(new HtmlString(facebookHTML))
                     <img src="~/StaticImages/Black_FaceBook_Logo.jpg" alt="Facebook" style="height:66px; width:66px;"/>
                 @(new HtmlString(endLinkTag))
@@ -70,7 +69,7 @@
 
             <!--LINKEDIN LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:25px;">
+            <div class="col" style="padding-left:75px;">
                 @(new HtmlString(linkedInHTML))
                 <img src="~/StaticImages/In-Black-66px-TM.png" alt="LinkedIn" />
                 @(new HtmlString(endLinkTag))
@@ -78,7 +77,7 @@
 
             <!--GITHUB LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:25px;">
+            <div class="col" style="padding-left:75px;">
                 @(new HtmlString(gitHubHTML))
                 <img src="~/StaticImages/GitHub-Mark-64px.png" alt="GitHub" />
                 @(new HtmlString(endLinkTag))
@@ -86,7 +85,7 @@
 
             <!--EMAIL LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:25px;">
+            <div class="col" style="padding-left:75px;">
                 @(new HtmlString(emailHTML))
                 <img src="~/StaticImages/email_64x64.png" alt="Email" />
                 @(new HtmlString(endLinkTag))
@@ -95,8 +94,8 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <div style="padding-left:50px; padding-top:25px;">
-                    <input type="button" class="btn btn-success" style="" value="Edit" onclick="location.href='@Url.Action("Edit", "ContactInformations", new { id = item.id})'" />
-                    <input type="button" class="btn btn-danger" style="" value="Delete" onclick="location.href='@Url.Action("Delete", "ContactInformations", new { id = item.id})'" />
+                    <input type="button" class="btn btn-success" style="" value="Edit" onclick="location.href='@Url.Action("Edit", "ContactInformation", new { id = item.id})'" />
+                    <input type="button" class="btn btn-danger" style="" value="Delete" onclick="location.href='@Url.Action("Delete", "ContactInformation", new { id = item.id})'" />
                 </div>
             }
 
