--- a/ReedHampton/Views/Shared/_Layout.cshtml
+++ b/ReedHampton/Views/Shared/_Layout.cshtml
@@ -27,12 +27,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Development", "Index", "ContactInformations")</li>
-                    <li>@Html.ActionLink("Resume", "Index", "ContactInformations")</li>
-                    <li>@Html.ActionLink("Tech Reviews", "Index", "ContactInformations")</li>
+                    <li>@Html.ActionLink("Development", "Index", "ContactInformation")</li>
+                    <li>@Html.ActionLink("Resume", "Index", "ContactInformation")</li>
+                    <li>@Html.ActionLink("Tech Reviews", "Index", "ContactInformation")</li>
                     <li>@Html.ActionLink("Photos", "AlbumGallery", "Albums")</li>
-                    <li>@Html.ActionLink("Blog", "Index", "ContactInformations")</li>
-                    <li id="ContactMe">@Html.ActionLink("Contact Me", "Index", "ContactInformations")</li>
+                    <li>@Html.ActionLink("Blog", "Index", "ContactInformation")</li>
+                    <li id="ContactMe">@Html.ActionLink("Contact Me", "Index", "ContactInformation")</li>
                 </ul>
             </div>
         </div>
