Added code for the Development Portfolio section. Added style to the Edit/Delete/Credit pages for the Development Portfolio. Added half of the style for the index page, need to add expandable images next.

--- a/ReedHampton/Views/Shared/_Layout.cshtml
+++ b/ReedHampton/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <style>
     #ContactMe {
-        margin-left: 250px;
+        margin-left: 600px;
     }
 </style>
 <html>
@@ -27,11 +27,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Development", "Index", "ContactInformation")</li>
+                    <li>@Html.ActionLink("Development", "Portfolio", "DevelopmentProjects")</li>
                     <li>@Html.ActionLink("Resume", "Index", "ContactInformation")</li>
-                    <li>@Html.ActionLink("Tech Reviews", "Index", "ContactInformation")</li>
                     <li>@Html.ActionLink("Photos", "AlbumGallery", "Albums")</li>
-                    <li>@Html.ActionLink("Blog", "Index", "ContactInformation")</li>
                     <li id="ContactMe">@Html.ActionLink("Contact Me", "Index", "ContactInformation")</li>
                 </ul>
             </div>
