--- a/ReedHampton/Views/ContactInformation/Index.cshtml
+++ b/ReedHampton/Views/ContactInformation/Index.cshtml
@@ -20,6 +20,18 @@
     .col {
         display: inline-block;
     }
+
+    .grow img {
+        transition: 1s ease;
+    }
+
+        .grow img:hover {
+            -webkit-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+            transform: scale(1.2);
+            transition: 1s ease;
+        }
+    
 </style>
 
 @{
@@ -30,7 +42,7 @@
 }
 
 
-<h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:75px; padding-bottom:130px;"> Let's be, Amici... Tomodachi... Copains... Friends</h1>
+<h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:130px;"> Let's be, Amici... Tomodachi... Copains... Friends</h1>
 
 
 
@@ -61,7 +73,7 @@
 
             <!--FACEBOOK LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:75px;">
+            <div class="col grow" style="padding-left:75px;">
                 @(new HtmlString(facebookHTML))
                     <img src="~/StaticImages/Black_FaceBook_Logo.jpg" alt="Facebook" style="height:66px; width:66px;"/>
                 @(new HtmlString(endLinkTag))
@@ -69,7 +81,7 @@
 
             <!--LINKEDIN LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:75px;">
+            <div class="col grow" style="padding-left:75px;">
                 @(new HtmlString(linkedInHTML))
                 <img src="~/StaticImages/In-Black-66px-TM.png" alt="LinkedIn" />
                 @(new HtmlString(endLinkTag))
@@ -77,7 +89,7 @@
 
             <!--GITHUB LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:75px;">
+            <div class="col grow" style="padding-left:75px;">
                 @(new HtmlString(gitHubHTML))
                 <img src="~/StaticImages/GitHub-Mark-64px.png" alt="GitHub" />
                 @(new HtmlString(endLinkTag))
@@ -85,7 +97,7 @@
 
             <!--EMAIL LINK AND IMAGE---------------------------------------------------------------------------->
 
-            <div class="col" style="padding-left:75px;">
+            <div class="col grow" style="padding-left:75px;">
                 @(new HtmlString(emailHTML))
                 <img src="~/StaticImages/email_64x64.png" alt="Email" />
                 @(new HtmlString(endLinkTag))
