--- a/ReedHampton/Views/Albums/AlbumGallery.cshtml
+++ b/ReedHampton/Views/Albums/AlbumGallery.cshtml
@@ -3,7 +3,19 @@
 @{
     ViewBag.Title = "Index";
 }
+<style>
+    .grow {
+        transition: 1.5s ease;
+    }
 
+    .grow:hover {
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
+        transition: 1s ease;
+    }
+
+</style>
 <script>
     function changeBackground(url)
     {
@@ -38,7 +50,7 @@
                     thumbnailPath = thumbnailPath.Remove(0, 2);
                     finalPath = @Request.ApplicationPath + thumbnailPath;
 
-                    start = "<div class=\"jumbotron\" style=\"background-size:cover; background-image:url(../.." + finalPath + ")\">";
+                    start = "<div class=\"jumbotron grow\" style=\"background-size:cover; background-image:url(../.." + finalPath + ")\">";
                     close = "</div>";
                 }
 
